Issues with JEP 270 (ReservedStackArea)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • 9
    • b21

      Andrew Haley reported the following issues with JEP 270 implementation:

      1 - the method look_for_reserved_stack_annotated_method() fails to detect in-lined annotated methods, making the annotation ineffective for in-lined methods

      2 - sometime an assertion failure related to reserved area status occurs after incorrect restoring of guards pages during a return from runtime

            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: