8172791: Issues with JEP 270 (ReservedStackArea)

Reviewed-by: dcubed, thartmann